--- a/cs_stylesheet.css
+++ b/cs_stylesheet.css
@@ -1,4 +1,5 @@
 body { font-family: "Roboto",Arial,sans-serif;
+    margin:0px;
 }
 #banner { 
     background-color:#ACACAC;
@@ -6,22 +7,14 @@ body { font-family: "Roboto",Arial,sans-serif;
     height:20px;
     float:top;
     text-align: center;
+    margin-top: 0px;
 } 
-header {
-    padding: 25px 0 10px;
-    margin: 0;
-    background: #edccba;
-    border-style: none;
-    border-width: 1px;
-    border-color: #eee;
-    font-size: 13px;
-    color: inherit;
-    position: relative;
-}
+
 
 #wrapper { 
     background-color:#ffffff;
     min-width:800px;
+    width:100%;
 } 
 
 
@@ -68,29 +61,95 @@ footer li a {
 /* .content {padding: 20px 20px 20px 20px;}   */
 .content table{padding: 20px 20px 20px 20px ; margin:auto;}
 
-/* Left Column Navigation Bar */
-nav ul {
+/* Navigation Bar */
+.topnav {
+    position: relative;
+    background-color: #ECCBBA;
+    overflow: hidden;
+    list-style-type: none;
+  }
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #333333;
+    text-align: center;
+    padding: 25px;
+    text-decoration: none;
+    font-size: 13px;
+    line-height: 20px;
+
+  }
+/* Change the color of links on hover */
+
+  /* Centered section inside the top navigation */
+.topnav-centered a {
+    float: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-height: 1px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+/* Right-aligned section inside the top navigation */
+.topnav-right {
+    float: right;
+  }
+
+  /* Right-aligned section inside the top navigation */
+  .topnav-left {
+    float: left;
+  }
+/* dropdown navigation */
+.dropdown{
+    position:relative;
+}
+.topnav-left  ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #ECCBBA;
-    display: flex;
-    justify-content: center;
+  }
 
+.topnav-left li {
+    float: left;
+  }
+
+.topnav-left li a, .dropbtn {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+}
+.topnav a:hover , .dropdown:hover .dropbtn {
+    color: #747474;
+}
+
+.topnav-left li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    
+    background-color: #ECCBBA;
+    min-width: 160px;
+    z-index: 1;
   }
   
-nav  li {
-    margin: 0;
-    padding: 0;
-    display: block;
-}
-  
-nav  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    margin: 5px 17px ;
-    padding: 10px;
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
     text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
   }
