--- a/cs_stylesheet.css
+++ b/cs_stylesheet.css
@@ -1,6 +1,21 @@
-body { font-family: "Roboto",Arial,sans-serif;
+body { font-family: "Roboto";
     margin:0px;
 }
+
+h1{
+  font-size: 20px;
+  width: 100%;
+  color: #333333;
+  text-align: center;
+}
+
+p{
+  margin: auto;
+  text-align: center;
+  font-size: 12px;
+  color: #555555;
+}
+
 #banner { 
     background-color:#ACACAC;
     min-width:900px;
@@ -49,7 +64,7 @@ footer li a {
 
 
 /*Content Box */
-.content {padding: 10px 40px 10px 20px; min-width:900px;} 
+.content {padding: 10px 20px 30px 20px; min-width:900px;} 
 /* .content {padding: 20px 20px 20px 20px;}   */
 .content table{padding: 20px 20px 20px 20px ; margin:auto;}
 
