--- a/cs_stylesheet.css
+++ b/cs_stylesheet.css
@@ -106,40 +106,48 @@ footer li a {
     float: right;
   }
 
-    .dropbtn {
-      background-color: #ECCBBA;
-      color: #333333;
-      padding: 16px;
-      font-size: 14px;
-      border: none;
-      font-family: "Roboto",Arial,sans-serif;
-      line-height: 20px;
-    }
+.dropbtn {
+  background-color: #ECCBBA;
+  color: #333333;
+  padding: 16px;
+  font-size: 14px;
+  border: none;
+  font-family: "Roboto",Arial,sans-serif;
+  line-height: 20px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #ECCBBA;
+  width: 170.74px;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #333333;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  width:138.74px;
+  text-align:left;
+}
     
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
     
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #ECCBBA;
-      width: 170.74px;
-      z-index: 1;
-    }
-    
-    .dropdown-content a {
-      color: #333333;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      width:138.74px;
-      text-align:left;
-    }
-    
-    
-    .topnav a:hover, .dropdown:hover .dropbtn, .dropdown-content a:hover {color: #a0a0a0;}
-    
-    .dropdown:hover .dropdown-content {display: block;}
-    
+.topnav a:hover, .dropdown:hover .dropbtn, .dropdown-content a:hover {color: #a0a0a0;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.homepage {
+  table-layout: fixed;
+  width: 100%;
+}
+
+.homepage td{
+  text-align: center;
+}
