--- a/cs_stylesheet.css
+++ b/cs_stylesheet.css
@@ -70,10 +70,13 @@ footer li a {
 
 /* Navigation Bar */
 .topnav {
-    position: relative;
+    position: sticky;
+    top:0;
     background-color: #ECCBBA;
     list-style-type: none;
     border: none;
+    z-index: 10;
+    padding: 5px;
   }
 
 /* Style the links inside the navigation bar */
