--- a/cs_stylesheet.css
+++ b/cs_stylesheet.css
@@ -154,3 +154,38 @@ footer li a {
 .homepage td{
   text-align: center;
 }
+
+/* Breadcrumbs Bar */
+
+/* Style the list */
+ul.breadcrumb {
+  background: transparent;
+  padding: 10px 35px;
+  margin-top: 5px;
+  font-size: 12px;
+  text-transform: uppercase;
+
+  /* background-color: #b3b3b3; */
+}
+/* Display list items side by side */
+ul.breadcrumb li {
+  display: inline;
+}
+/* Add a slash symbol (/) before/behind each list item */
+ul.breadcrumb li+li:before {
+  padding: 10px;
+  color: #b3b3b3;
+  content: "/\00a0";
+}
+
+/* Add a color to all links inside the list */
+ul.breadcrumb li a {
+  color: #333333;
+  text-decoration: none;
+}
+
+/* Add a color on mouse-over */
+ul.breadcrumb li a:hover {
+  color: #555555;
+  text-decoration: underline;
+}
