--- a/cs_stylesheet.css
+++ b/cs_stylesheet.css
@@ -39,23 +39,29 @@ p{
 
 button {
   background-color: #333333;
-  color: white;
-  padding:10px 20px;
+  color:#e9e9e9;
+  padding:8px 40px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  font-size: 13px;
-  font: "Roboto";
+  font-size: 14px;
+  font-family: "Roboto";
+  
+}
+button:hover{
+  background-color: #ECCBBA;
+  color:#555555 ;
 }
 
 footer{background-color: #ECCBBA;
       color: #555555; 
-      width: 100%;}
+      width: 100%;
+      height: 100px ;}
 
 footer ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 20px 0 0 0;
     overflow: hidden;
     display: flex;
     justify-content: center;
